# copilot-llm-council

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: code-review-council.yaml  debate-council.yaml  deep-debate-council.yaml
src/copilot_council/: __init__.py  cli.py  council.py  exceptions.py  logging.py
src/copilot_council/adapters/: __init__.py  copilot.py
src/copilot_council/config/: __init__.py  loader.py  schema.py
src/copilot_council/models/: __init__.py  member.py  response.py  role.py  session.py
src/copilot_council/roles/: __init__.py  predefined.py
src/copilot_council/strategies/: __init__.py  base.py  debate.py  parallel.py  sequential.py
tests/: conftest.py
tests/integration/: __init__.py
tests/unit/: test_adapter.py  test_config.py  test_council.py  test_models.py  test_roles.py
